10635
Here's another one. This works in 2.10 because FunctionClass contains ClassSymbols. It seems to have been downgraded to Symbols.
{code}
scala> import scala.reflect.runtime.universe._
import scala.reflect.runtime.universe._

scala> definitions.FunctionClass(1).toType
<console>:11: error: value toType is not a member of reflect.runtime.universe.Symbol
              definitions.FunctionClass(1).toType
                                           ^
{code}
